# epoch-cheats

./: .buildinfo  .gitignore  epoch_cheats.html  example.ipynb  genindex.html  index.html  make_docs.sh  mkdocs.yml  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tests.html  tox.ini
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/epoch_cheats/: PARAMS.html  cli.html  deck.html  deck_parse.html
_modules/tests/: test_cli.html  test_deck_parse.html
_sources/: epoch_cheats.rst  modules.rst  tests.rst
docs/: conf.py  epoch_cheats.rst  index.md  index.rst
docs/API/: cli.md  deck_parse.md
epoch_cheats/: PARAMS.py  __init__.py  cli.py  deck.py  deck_parse.py
tests/: __init__.py  test_cli.py  test_deck_parse.py  test_input.deck
