[metadata]
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7

[options]
packages = 
    epoch_cheats
install_requires = 
    sympy>=1.11
    typer>=0.7
    pydantic>=1.10
python_requires = >=3.7
zip_safe = no

[options.extras_require]
testing = 
    pytest>=7.2
    pytest-cov>=4
    mypy>=1.1
    flake8>=6
    flake8-bugbear>=23.3
    black>=23.1
    sphinx >= 6.1
    sphinx-book-theme>=1.0
    

[options.package_data]
epoch_cheats = py.typed

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
per-file-ignores =
    epoch_cheats/__init__.py:F401
